fix work section layout on mobile

--- a/css/inline.css
+++ b/css/inline.css
@@ -212,13 +212,17 @@ body {
   position: relative;
   margin-bottom: 5em;
   display: flex;
+  flex-flow: row wrap;
+  gap: 5%;
+  margin: 5%;
 }
 .work-description {
-  max-width: 60%;
+  flex: 1
 }
 .work-canvas {
-  width: 30%;
-  margin: 0 5%;
+  position: relative;
+  flex: 0;
+  display: inline;
   text-align: center;
 }
 .work-image {
